[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/themes/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/Options.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/Button.ogg" type="AudioStream" id=3]

[node name="Options" type="CanvasLayer"]
pause_mode = 2
layer = 11
script = ExtResource( 2 )
__meta__ = {
"_edit_vertical_guides_": [ 960.406 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1076.0
color = Color( 0, 0, 0, 0.913725 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="."]
visible = false
margin_left = 896.887
margin_top = 928.071
margin_right = 1014.89
margin_bottom = 986.071
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 55.9685, 27.7433 )
theme = ExtResource( 1 )
text = "Save and Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundSlider" type="HSlider" parent="."]
visible = false
margin_left = 650.227
margin_top = 689.544
margin_right = 806.227
margin_bottom = 717.544
rect_scale = Vector2( 4, 4 )
min_value = -80.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VolumeLabel" type="Label" parent="."]
visible = false
margin_left = 889.251
margin_top = 629.377
margin_right = 936.251
margin_bottom = 652.377
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
text = "VOLUME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="CheckBox" parent="."]
visible = false
margin_left = 702.408
margin_top = 460.314
margin_right = 829.408
margin_bottom = 500.314
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
text = "    Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSync" type="CheckBox" parent="."]
visible = false
margin_left = 702.408
margin_top = 319.044
margin_right = 829.408
margin_bottom = 359.044
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
text = "    V-Sync"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="value_changed" from="SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="toggled" from="VSync" to="." method="_on_VSync_toggled"]
